; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-s3c/extr_dma.c_s3c_dma_lookup_channel.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-s3c/extr_dma.c_s3c_dma_lookup_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s3c2410_dma_chan = type { i32 }

@DMACH_LOW_LEVEL = common dso_local global i32 0, align 4
@s3c2410_chans = common dso_local global %struct.s3c2410_dma_chan* null, align 8
@s3c_dma_chan_map = common dso_local global %struct.s3c2410_dma_chan** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.s3c2410_dma_chan* @s3c_dma_lookup_channel(i32 %0) #0 {
  %2 = alloca %struct.s3c2410_dma_chan*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @DMACH_LOW_LEVEL, align 4
  %6 = and i32 %4, %5
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %16

8:                                                ; preds = %1
  %9 = load %struct.s3c2410_dma_chan*, %struct.s3c2410_dma_chan** @s3c2410_chans, align 8
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @DMACH_LOW_LEVEL, align 4
  %12 = xor i32 %11, -1
  %13 = and i32 %10, %12
  %14 = zext i32 %13 to i64
  %15 = getelementptr inbounds %struct.s3c2410_dma_chan, %struct.s3c2410_dma_chan* %9, i64 %14
  store %struct.s3c2410_dma_chan* %15, %struct.s3c2410_dma_chan** %2, align 8
  br label %22

16:                                               ; preds = %1
  %17 = load %struct.s3c2410_dma_chan**, %struct.s3c2410_dma_chan*** @s3c_dma_chan_map, align 8
  %18 = load i32, i32* %3, align 4
  %19 = zext i32 %18 to i64
  %20 = getelementptr inbounds %struct.s3c2410_dma_chan*, %struct.s3c2410_dma_chan** %17, i64 %19
  %21 = load %struct.s3c2410_dma_chan*, %struct.s3c2410_dma_chan** %20, align 8
  store %struct.s3c2410_dma_chan* %21, %struct.s3c2410_dma_chan** %2, align 8
  br label %22

22:                                               ; preds = %16, %8
  %23 = load %struct.s3c2410_dma_chan*, %struct.s3c2410_dma_chan** %2, align 8
  ret %struct.s3c2410_dma_chan* %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
